--- a/src/scss/big-container-call.scss
+++ b/src/scss/big-container-call.scss
@@ -6,6 +6,7 @@ $mint: #41f6d7;
 $raspberry: #ff3e79;
 $muted-white: #eaeaea;
 $white-transparent: #ffffff6c;
+$light-gray: #7e7e82;
 
 @keyframes appearance {
   from {
@@ -38,12 +39,18 @@ $white-transparent: #ffffff6c;
   flex-direction: column;
   border-left: 1px solid $dark-green;
   padding-left: 30px;
-  height: 855px;
+  height: 100vh;
   background-color: $white;
   box-shadow: 16px 0px 52px 0px $shadow-dark-blue;
+  position: absolute;
+  right: 0;
+  z-index: 200;
 
   &__h1 {
     font-family: 'TTLakes bold';
+    font-size: 30px;
+    margin-top: 28px;
+    margin-bottom: 28px;
 
     &::before {
       display: flex;
@@ -76,12 +83,14 @@ $white-transparent: #ffffff6c;
     height: 32px;
     border: none;
     margin-top: 23px;
-  }
+    margin-left: 255px;
 
-  &__div {
-    display: flex;
-    width: 396px;
-    justify-content: flex-end;
+    &:hover {
+      cursor: pointer;
+      opacity: 0.5;
+      transition-property: opacity;
+      transition-duration: 0.2s;
+    }
   }
 
   &__close-modal {
@@ -100,6 +109,9 @@ $white-transparent: #ffffff6c;
 
     &:hover {
       cursor: pointer;
+      opacity: 0.5;
+      transition-property: opacity;
+      transition-duration: 0.2s;
     }
   }
 
@@ -144,19 +156,23 @@ $white-transparent: #ffffff6c;
     &__h1 {
       margin-top: 75px;
     }
+
+    &__button-send {
+      margin-left: 135px;
+    }
   }
 
   .input-f {
     width: auto;
   }
 
-  .empty-call {
+  .overlay-call {
     display: none;
   }
 }
 
 @media (min-width: 768px) and (max-width: 1119px) {
-  .empty-call {
+  .overlay-call {
     width: 100%;
     height: 250vh;
     background-color: $white-transparent;
@@ -166,11 +182,11 @@ $white-transparent: #ffffff6c;
 }
 
 @media (min-width: 1120px) {
-  .empty-call {
+  .overlay-call {
     width: 100%;
     height: 250vh;
     background-color: $white-transparent;
     position: absolute;
-    z-index: -1;
+    z-index: 20;
   }
 }
