--- a/src/scss/big-container-feedback.scss
+++ b/src/scss/big-container-feedback.scss
@@ -6,6 +6,7 @@ $mint: #41f6d7;
 $raspberry: #ff3e79;
 $muted-white: #eaeaea;
 $white-transparent: #ffffff6c;
+$light-gray: #7e7e82;
 
 @keyframes appearance {
   from {
@@ -31,6 +32,7 @@ $white-transparent: #ffffff6c;
   animation: appearance 1s;
   position: absolute;
   z-index: 51;
+  top: 0;
 }
 
 .feedback {
@@ -38,12 +40,17 @@ $white-transparent: #ffffff6c;
   flex-direction: column;
   border-left: 1px solid $dark-green;
   padding-left: 30px;
-  height: 855px;
+  height: 100vh;
   background-color: $white;
   box-shadow: 16px 0px 52px 0px $shadow-dark-blue;
+  position: absolute;
+  right: 0;
 
   &__h1 {
     font-family: 'TTLakes bold';
+    font-size: 30px;
+    margin-top: 28px;
+    margin-bottom: 28px;
 
     &::before {
       display: flex;
@@ -84,12 +91,14 @@ $white-transparent: #ffffff6c;
     height: 32px;
     border: none;
     margin-top: 23px;
-  }
+    margin-left: 255px;
 
-  &__div {
-    display: flex;
-    width: 396px;
-    justify-content: flex-end;
+    &:hover {
+      cursor: pointer;
+      opacity: 0.5;
+      transition-property: opacity;
+      transition-duration: 0.2s;
+    }
   }
 
   &__close-modal {
@@ -105,10 +114,13 @@ $white-transparent: #ffffff6c;
     margin: 20px;
     margin-left: -90px;
     position: absolute;
-    right: 440px;
+    right: 455px;
 
     &:hover {
       cursor: pointer;
+      opacity: 0.5;
+      transition-property: opacity;
+      transition-duration: 0.2s;
     }
   }
 
@@ -130,7 +142,7 @@ $white-transparent: #ffffff6c;
 }
 
 @media (min-width: 320px) and (max-width: 767px) {
-  .empty-feedback {
+  .overlay-feedback {
     display: none;
   }
 
@@ -153,6 +165,10 @@ $white-transparent: #ffffff6c;
     &__h1 {
       margin-top: 75px;
     }
+
+    &__button-send {
+      margin-left: 135px;
+    }
   }
 
   .input-f {
@@ -165,7 +181,7 @@ $white-transparent: #ffffff6c;
 }
 
 @media (min-width: 768px) and (max-width: 1119px) {
-  .empty-feedback {
+  .overlay-feedback {
     width: 100%;
     height: 250vh;
     background-color: $white-transparent;
@@ -175,7 +191,7 @@ $white-transparent: #ffffff6c;
 }
 
 @media (min-width: 1120px) {
-  .empty-feedback {
+  .overlay-feedback {
     width: 100%;
     height: 250vh;
     background-color: $white-transparent;
