--- a/src/scss/swiper.scss
+++ b/src/scss/swiper.scss
@@ -1,6 +1,18 @@
+$light-gray: #7e7e82;
+
 .swiper {
   margin-left: 16px;
   margin-top: 32px;
+  padding: 3px;
+}
+
+.all-card__link {
+  &:hover {
+    box-shadow: 0 0 3px 3px $light-gray;
+    transition-property: box-shadow;
+    transition-duration: 0.2s;
+    cursor: pointer;
+  }
 }
 
 @media (min-width: 320px) and (max-width: 767px) {
